# PipeRelay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PipeRelay  PipeRelay.cbp  README.md  TODO  exampleConfigFileForSSH  main.cpp  main.h
Loging/: Log.cpp
PipeRelay/: BaseReader.cpp  PipeHandler.h
PipeRelay/Reader/: PipeReader.h
PipeRelay/Writer/: PipeWriter.cpp  PipeWriter.h
PipeRelay/ssh/: ReadConfig.cpp  ReadConfig.h  Ssh.cpp  Ssh.h
Test/: init.cpp
include/: PipeHandler.h  PipeReader.h  PipeWriter.h  ReadConfig.h  Ssh.h
src/: Pipehandler.cpp
src/Reader/: PipeReader.cpp
src/Writer/: PipeWriter.cpp
src/ssh/: ReadConfig.cpp  Ssh.cpp
